creating List with Optional and converrt it to map plus custom exception